<resources>
    <!--GENERAL-->
    <string name="app_name">The Original Guesser Game</string>
    <string name="game_name">City Guesser</string>
    <string name="auteurs">CABASSON Guillaume</string>

    <!--MENU ACCUEIL-->
    <string name="menu_name">ACCUEIL</string>
    <string name="menu_play">JOUER</string>
    <string name="menu_play_city_guesser">CITY GUESSER</string>
    <string name="menu_user">SE CONNECTER</string>
    <string name="menu_settings">OPTIONS</string>
    <string name="menu_quit">QUITTER</string>
    <string name="menu_gohome">RETOUR AU MENU</string>
    <string name="menu_records">RECORDS</string>

    <!--STRING JEU-->
    <string name="btn_valider">VALIDER</string>

    <string-array name="country_array">
        <item>Allemagne</item>
        <item>Autriche</item>
        <item>Belgique</item>
        <item>Bulgarie</item>
        <item>Chypre</item>
        <item>Croatie</item>
        <item>Danemark</item>
        <item>Espagne</item>
        <item>Estonie</item>
        <item>Etats-Unis</item>
        <item>Finlande</item>
        <item>France</item>
        <item>Grèce</item>
        <item>Hongrie</item>
        <item>Irlande</item>
        <item>Italie</item>
        <item>Lettonie</item>
        <item>Lituanie</item>
        <item>Luxembourg</item>
        <item>Malte</item>
        <item>Pays-Bas</item>
        <item>Pologne</item>
        <item>Portugal</item>
        <item>République Tchèque</item>
        <item>Roumanie</item>
        <item>Slovaquie</item>
        <item>Slovénie</item>
        <item>Suède</item>
    </string-array>
</resources>