<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="55sp"
            android:layout_weight="3"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:visibility="visible"
            android:textSize="80sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonJouer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="#22780F"
            android:textColor="#FFFFFF"
            android:gravity="center|center_horizontal|center_vertical"
            android:letterSpacing="0"
            android:lines="1"
            android:text="@string/menu_play"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonQuitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="#F44336"
            android:text="@string/menu_quit"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textViewNoms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|right"
            android:text="@string/auteurs"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>