<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="55sp"
            android:layout_weight="3"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="visible"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonJouer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:textColor="@color/white"
            android:gravity="center|center_horizontal|center_vertical"
            android:lines="1"
            android:text="@string/menu_play"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonCompte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:gravity="center|center_horizontal|center_vertical"
            android:lines="1"
            android:text="@string/menu_user"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonQuitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:textColor="@color/white"
            android:gravity="center|center_horizontal|center_vertical"
            android:lines="1"
            android:text="@string/menu_quit"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="Bonjour"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>